--- a/Credit_Card_Fraud_Detection_with_DT&SVM.ipynb
+++ b/Credit_Card_Fraud_Detection_with_DT&SVM.ipynb
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e39c34d0",
    "metadata": {},
    "outputs": [
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "b76ea64c",
    "metadata": {},
    "outputs": [
@@ -1745,13 +1745,46 @@
     }
    ],
    "source": [
-    "svm2 = LinearSVC(class_weight='balanced', random_state=32, loss=\"hinge\", fit_intercept = False)\n",
+    "svm2 = LinearSVC(class_weight='balanced', random_state=31, loss=\"hinge\", fit_intercept = False)\n",
     "svm2.fit(X_train, y_train)\n",
     "\n",
     "y_pred_svm2 = svm2.decision_function(X_test)\n",
     "roc_auc_svm2 = roc_auc_score(y_test, y_pred_svm2)\n",
     "print('SVM ROC-AUC score: {0:.3f}'.format(roc_auc_svm2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b3fc442",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fd1fa83",
+   "metadata": {},
+   "source": [
+    "## Drawing Inference about Decision Trees and SVMs\n",
+    "- With a larger set of features,?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5727686",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55a164be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
