--- a/Credit_Card_Fraud_Detection_with_DT&SVM.ipynb
+++ b/Credit_Card_Fraud_Detection_with_DT&SVM.ipynb
@@ -110,17 +110,7 @@
        "      <th>V7</th>\n",
        "      <th>V8</th>\n",
        "      <th>V9</th>\n",
-       "      <th>V10</th>\n",
-       "      <th>V11</th>\n",
-       "      <th>V12</th>\n",
-       "      <th>V13</th>\n",
-       "      <th>V14</th>\n",
-       "      <th>V15</th>\n",
-       "      <th>V16</th>\n",
-       "      <th>V17</th>\n",
-       "      <th>V18</th>\n",
-       "      <th>V19</th>\n",
-       "      <th>V20</th>\n",
+       "      <th>...</th>\n",
        "      <th>V21</th>\n",
        "      <th>V22</th>\n",
        "      <th>V23</th>\n",
@@ -146,17 +136,7 @@
        "      <td>0.239599</td>\n",
        "      <td>0.098698</td>\n",
        "      <td>0.363787</td>\n",
-       "      <td>0.090794</td>\n",
-       "      <td>-0.551600</td>\n",
-       "      <td>-0.617801</td>\n",
-       "      <td>-0.991390</td>\n",
-       "      <td>-0.311169</td>\n",
-       "      <td>1.468177</td>\n",
-       "      <td>-0.470401</td>\n",
-       "      <td>0.207971</td>\n",
-       "      <td>0.025791</td>\n",
-       "      <td>0.403993</td>\n",
-       "      <td>0.251412</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.018307</td>\n",
        "      <td>0.277838</td>\n",
        "      <td>-0.110474</td>\n",
@@ -180,17 +160,7 @@
        "      <td>-0.078803</td>\n",
        "      <td>0.085102</td>\n",
        "      <td>-0.255425</td>\n",
-       "      <td>-0.166974</td>\n",
-       "      <td>1.612727</td>\n",
-       "      <td>1.065235</td>\n",
-       "      <td>0.489095</td>\n",
-       "      <td>-0.143772</td>\n",
-       "      <td>0.635558</td>\n",
-       "      <td>0.463917</td>\n",
-       "      <td>-0.114805</td>\n",
-       "      <td>-0.183361</td>\n",
-       "      <td>-0.145783</td>\n",
-       "      <td>-0.069083</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.225775</td>\n",
        "      <td>-0.638672</td>\n",
        "      <td>0.101288</td>\n",
@@ -214,17 +184,7 @@
        "      <td>0.791461</td>\n",
        "      <td>0.247676</td>\n",
        "      <td>-1.514654</td>\n",
-       "      <td>0.207643</td>\n",
-       "      <td>0.624501</td>\n",
-       "      <td>0.066084</td>\n",
-       "      <td>0.717293</td>\n",
-       "      <td>-0.165946</td>\n",
-       "      <td>2.345865</td>\n",
-       "      <td>-2.890083</td>\n",
-       "      <td>1.109969</td>\n",
-       "      <td>-0.121359</td>\n",
-       "      <td>-2.261857</td>\n",
-       "      <td>0.524980</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.247998</td>\n",
        "      <td>0.771679</td>\n",
        "      <td>0.909412</td>\n",
@@ -248,17 +208,7 @@
        "      <td>0.237609</td>\n",
        "      <td>0.377436</td>\n",
        "      <td>-1.387024</td>\n",
-       "      <td>-0.054952</td>\n",
-       "      <td>-0.226487</td>\n",
-       "      <td>0.178228</td>\n",
-       "      <td>0.507757</td>\n",
-       "      <td>-0.287924</td>\n",
-       "      <td>-0.631418</td>\n",
-       "      <td>-1.059647</td>\n",
-       "      <td>-0.684093</td>\n",
-       "      <td>1.965775</td>\n",
-       "      <td>-1.232622</td>\n",
-       "      <td>-0.208038</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.108300</td>\n",
        "      <td>0.005274</td>\n",
        "      <td>-0.190321</td>\n",
@@ -282,17 +232,7 @@
        "      <td>0.592941</td>\n",
        "      <td>-0.270533</td>\n",
        "      <td>0.817739</td>\n",
-       "      <td>0.753074</td>\n",
-       "      <td>-0.822843</td>\n",
-       "      <td>0.538196</td>\n",
-       "      <td>1.345852</td>\n",
-       "      <td>-1.119670</td>\n",
-       "      <td>0.175121</td>\n",
-       "      <td>-0.451449</td>\n",
-       "      <td>-0.237033</td>\n",
-       "      <td>-0.038195</td>\n",
-       "      <td>0.803487</td>\n",
-       "      <td>0.408542</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.009431</td>\n",
        "      <td>0.798278</td>\n",
        "      <td>-0.137458</td>\n",
@@ -327,16 +267,6 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>284802</th>\n",
@@ -350,17 +280,7 @@
        "      <td>-4.918215</td>\n",
        "      <td>7.305334</td>\n",
        "      <td>1.914428</td>\n",
-       "      <td>4.356170</td>\n",
-       "      <td>-1.593105</td>\n",
-       "      <td>2.711941</td>\n",
-       "      <td>-0.689256</td>\n",
-       "      <td>4.626942</td>\n",
-       "      <td>-0.924459</td>\n",
-       "      <td>1.107641</td>\n",
-       "      <td>1.991691</td>\n",
-       "      <td>0.510632</td>\n",
-       "      <td>-0.682920</td>\n",
-       "      <td>1.475829</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.213454</td>\n",
        "      <td>0.111864</td>\n",
        "      <td>1.014480</td>\n",
@@ -384,17 +304,7 @@
        "      <td>0.024330</td>\n",
        "      <td>0.294869</td>\n",
        "      <td>0.584800</td>\n",
-       "      <td>-0.975926</td>\n",
-       "      <td>-0.150189</td>\n",
-       "      <td>0.915802</td>\n",
-       "      <td>1.214756</td>\n",
-       "      <td>-0.675143</td>\n",
-       "      <td>1.164931</td>\n",
-       "      <td>-0.711757</td>\n",
-       "      <td>-0.025693</td>\n",
-       "      <td>-1.221179</td>\n",
-       "      <td>-1.545556</td>\n",
-       "      <td>0.059616</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.214205</td>\n",
        "      <td>0.924384</td>\n",
        "      <td>0.012463</td>\n",
@@ -418,17 +328,7 @@
        "      <td>-0.296827</td>\n",
        "      <td>0.708417</td>\n",
        "      <td>0.432454</td>\n",
-       "      <td>-0.484782</td>\n",
-       "      <td>0.411614</td>\n",
-       "      <td>0.063119</td>\n",
-       "      <td>-0.183699</td>\n",
-       "      <td>-0.510602</td>\n",
-       "      <td>1.329284</td>\n",
-       "      <td>0.140716</td>\n",
-       "      <td>0.313502</td>\n",
-       "      <td>0.395652</td>\n",
-       "      <td>-0.577252</td>\n",
-       "      <td>0.001396</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.232045</td>\n",
        "      <td>0.578229</td>\n",
        "      <td>-0.037501</td>\n",
@@ -452,17 +352,7 @@
        "      <td>-0.686180</td>\n",
        "      <td>0.679145</td>\n",
        "      <td>0.392087</td>\n",
-       "      <td>-0.399126</td>\n",
-       "      <td>-1.933849</td>\n",
-       "      <td>-0.962886</td>\n",
-       "      <td>-1.042082</td>\n",
-       "      <td>0.449624</td>\n",
-       "      <td>1.962563</td>\n",
-       "      <td>-0.608577</td>\n",
-       "      <td>0.509928</td>\n",
-       "      <td>1.113981</td>\n",
-       "      <td>2.897849</td>\n",
-       "      <td>0.127434</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.265245</td>\n",
        "      <td>0.800049</td>\n",
        "      <td>-0.163298</td>\n",
@@ -486,17 +376,7 @@
        "      <td>1.577006</td>\n",
        "      <td>-0.414650</td>\n",
        "      <td>0.486180</td>\n",
-       "      <td>-0.915427</td>\n",
-       "      <td>-1.040458</td>\n",
-       "      <td>-0.031513</td>\n",
-       "      <td>-0.188093</td>\n",
-       "      <td>-0.084316</td>\n",
-       "      <td>0.041333</td>\n",
-       "      <td>-0.302620</td>\n",
-       "      <td>-0.660377</td>\n",
-       "      <td>0.167430</td>\n",
-       "      <td>-0.256117</td>\n",
-       "      <td>0.382948</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.261057</td>\n",
        "      <td>0.643078</td>\n",
        "      <td>0.376777</td>\n",
@@ -514,18 +394,57 @@
        "</div>"
       ],
       "text/plain": [
-       "            Time         V1         V2  ...       V28  Amount  Class\n",
-       "0            0.0  -1.359807  -0.072781  ... -0.021053  149.62      0\n",
-       "1            0.0   1.191857   0.266151  ...  0.014724    2.69      0\n",
-       "2            1.0  -1.358354  -1.340163  ... -0.059752  378.66      0\n",
-       "3            1.0  -0.966272  -0.185226  ...  0.061458  123.50      0\n",
-       "4            2.0  -1.158233   0.877737  ...  0.215153   69.99      0\n",
-       "...          ...        ...        ...  ...       ...     ...    ...\n",
-       "284802  172786.0 -11.881118  10.071785  ...  0.823731    0.77      0\n",
-       "284803  172787.0  -0.732789  -0.055080  ... -0.053527   24.79      0\n",
-       "284804  172788.0   1.919565  -0.301254  ... -0.026561   67.88      0\n",
-       "284805  172788.0  -0.240440   0.530483  ...  0.104533   10.00      0\n",
-       "284806  172792.0  -0.533413  -0.189733  ...  0.013649  217.00      0\n",
+       "            Time         V1         V2        V3        V4        V5  \\\n",
+       "0            0.0  -1.359807  -0.072781  2.536347  1.378155 -0.338321   \n",
+       "1            0.0   1.191857   0.266151  0.166480  0.448154  0.060018   \n",
+       "2            1.0  -1.358354  -1.340163  1.773209  0.379780 -0.503198   \n",
+       "3            1.0  -0.966272  -0.185226  1.792993 -0.863291 -0.010309   \n",
+       "4            2.0  -1.158233   0.877737  1.548718  0.403034 -0.407193   \n",
+       "...          ...        ...        ...       ...       ...       ...   \n",
+       "284802  172786.0 -11.881118  10.071785 -9.834783 -2.066656 -5.364473   \n",
+       "284803  172787.0  -0.732789  -0.055080  2.035030 -0.738589  0.868229   \n",
+       "284804  172788.0   1.919565  -0.301254 -3.249640 -0.557828  2.630515   \n",
+       "284805  172788.0  -0.240440   0.530483  0.702510  0.689799 -0.377961   \n",
+       "284806  172792.0  -0.533413  -0.189733  0.703337 -0.506271 -0.012546   \n",
+       "\n",
+       "              V6        V7        V8        V9  ...       V21       V22  \\\n",
+       "0       0.462388  0.239599  0.098698  0.363787  ... -0.018307  0.277838   \n",
+       "1      -0.082361 -0.078803  0.085102 -0.255425  ... -0.225775 -0.638672   \n",
+       "2       1.800499  0.791461  0.247676 -1.514654  ...  0.247998  0.771679   \n",
+       "3       1.247203  0.237609  0.377436 -1.387024  ... -0.108300  0.005274   \n",
+       "4       0.095921  0.592941 -0.270533  0.817739  ... -0.009431  0.798278   \n",
+       "...          ...       ...       ...       ...  ...       ...       ...   \n",
+       "284802 -2.606837 -4.918215  7.305334  1.914428  ...  0.213454  0.111864   \n",
+       "284803  1.058415  0.024330  0.294869  0.584800  ...  0.214205  0.924384   \n",
+       "284804  3.031260 -0.296827  0.708417  0.432454  ...  0.232045  0.578229   \n",
+       "284805  0.623708 -0.686180  0.679145  0.392087  ...  0.265245  0.800049   \n",
+       "284806 -0.649617  1.577006 -0.414650  0.486180  ...  0.261057  0.643078   \n",
+       "\n",
+       "             V23       V24       V25       V26       V27       V28  Amount  \\\n",
+       "0      -0.110474  0.066928  0.128539 -0.189115  0.133558 -0.021053  149.62   \n",
+       "1       0.101288 -0.339846  0.167170  0.125895 -0.008983  0.014724    2.69   \n",
+       "2       0.909412 -0.689281 -0.327642 -0.139097 -0.055353 -0.059752  378.66   \n",
+       "3      -0.190321 -1.175575  0.647376 -0.221929  0.062723  0.061458  123.50   \n",
+       "4      -0.137458  0.141267 -0.206010  0.502292  0.219422  0.215153   69.99   \n",
+       "...          ...       ...       ...       ...       ...       ...     ...   \n",
+       "284802  1.014480 -0.509348  1.436807  0.250034  0.943651  0.823731    0.77   \n",
+       "284803  0.012463 -1.016226 -0.606624 -0.395255  0.068472 -0.053527   24.79   \n",
+       "284804 -0.037501  0.640134  0.265745 -0.087371  0.004455 -0.026561   67.88   \n",
+       "284805 -0.163298  0.123205 -0.569159  0.546668  0.108821  0.104533   10.00   \n",
+       "284806  0.376777  0.008797 -0.473649 -0.818267 -0.002415  0.013649  217.00   \n",
+       "\n",
+       "        Class  \n",
+       "0           0  \n",
+       "1           0  \n",
+       "2           0  \n",
+       "3           0  \n",
+       "4           0  \n",
+       "...       ...  \n",
+       "284802      0  \n",
+       "284803      0  \n",
+       "284804      0  \n",
+       "284805      0  \n",
+       "284806      0  \n",
        "\n",
        "[284807 rows x 31 columns]"
       ]
@@ -554,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "ab0ca449",
    "metadata": {},
    "outputs": [
@@ -594,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4ed1fb9f",
    "metadata": {},
    "outputs": [
@@ -604,7 +523,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -634,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b816fed6",
    "metadata": {},
    "outputs": [],
@@ -661,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "f26ad899",
    "metadata": {},
    "outputs": [],
@@ -679,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "2bd9c67a",
    "metadata": {},
    "outputs": [],
@@ -691,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "38614d28",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1038,7 @@
        "DecisionTreeClassifier(max_depth=4, random_state=35)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "114feba3",
    "metadata": {},
    "outputs": [
@@ -1571,7 +1490,7 @@
        "          random_state=31)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1591,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "0b9cfedf",
    "metadata": {},
    "outputs": [],
@@ -1601,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e39c34d0",
    "metadata": {},
    "outputs": [
@@ -1628,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "d4bbdf1f",
    "metadata": {},
    "outputs": [],
@@ -1638,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "f2ff3cde",
    "metadata": {},
    "outputs": [
@@ -1665,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "4e72e9e9",
    "metadata": {},
    "outputs": [
@@ -1675,7 +1594,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1698,17 +1617,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "dfc04dc0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = data_matrix[:, [3,10,12,14,16,17]]"
+    "X = data_matrix[:, [3,10,12,14,16,17]]\n",
+    "X = normalize(X, norm=\"l1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "3e9c2f5a",
    "metadata": {},
    "outputs": [
@@ -1716,7 +1636,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decision Tree 2 ROC-AUC score: 0.921\n"
+      "Decision Tree 2 ROC-AUC score: 0.952\n"
      ]
     }
    ],
@@ -1732,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "b76ea64c",
    "metadata": {},
    "outputs": [
@@ -1740,7 +1660,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM ROC-AUC score: 0.972\n"
+      "SVM ROC-AUC score: 0.938\n"
      ]
     }
    ],
