--- a/Credit_Card_Fraud_Detection_with_DT&SVM.ipynb
+++ b/Credit_Card_Fraud_Detection_with_DT&SVM.ipynb
@@ -1698,17 +1698,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "dfc04dc0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = data_matrix[:, [3,10,12,14,16,17]]"
+    "X = data_matrix[:, [3,10,12,14,16,17]]\n",
+    "X = normalize(X, norm='l1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "3e9c2f5a",
    "metadata": {},
    "outputs": [
@@ -1716,7 +1717,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decision Tree 2 ROC-AUC score: 0.921\n"
+      "Decision Tree 2 ROC-AUC score: 0.952\n"
      ]
     }
    ],
@@ -1732,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "b76ea64c",
    "metadata": {},
    "outputs": [
@@ -1740,7 +1741,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM ROC-AUC score: 0.972\n"
+      "SVM ROC-AUC score: 0.937\n"
      ]
     }
    ],
@@ -1754,44 +1755,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b3fc442",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "7fd1fa83",
    "metadata": {},
    "source": [
     "## Drawing Inference about Decision Trees and SVMs\n",
-    "- With a larger set of features,?"
+    "- With a larger set of features, SVM perform better relative to DT\n",
+    "- DT perform better with selective features\n",
+    "- SVM may require higher feature dimentionality to create an efficient hyperplane"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5727686",
+   "cell_type": "markdown",
+   "id": "8d95a56b",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55a164be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41b6a0ac",
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
